# mba-ml-iml4-ex02

./: .gitignore  Makefile  README.md  pyproject.toml  water_quality.py  water_quality_old.ipynb
mlflow-minio-setup/: Makefile  docker-compose.yml
