[tool.poetry]
name = "exercicio02"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seu.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.4.3"
mlflow = "^1.20.2"
numpy = "^1.21.0"
pandas = "^1.3.3"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
water_quality = "water_quality:main"
